# diabetesprediction-mlops-project

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml
model/: model.pkl
models/: keep.txt
src/: api.py  data_loader.py  data_validation.py  predict.py  preprocess.py  train.py
tests/: test_api.py  test_data_loader.py  test_imports.py  test_preprocess.py
