[project]
name = "diabetesprediction-mlops-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "mlflow>=2.12",
    "numpy>=2.4.1",
    "pandas<3",
    "protobuf<5",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "scikit-learn>=1.8.0",
    "setuptools>=82.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
